--- a/index.html
+++ b/index.html
@@ -41,24 +41,18 @@
     <section class="hero" id="header-background">
         <div class="hero-area">
         <div class="hero-text">
-        <h1 style="text-align: center; color:white; text-shadow: 1px 1px 2px black; text-transform: uppercase;">Hank Orion</h1>
-        <p style="text-align: center; background-color: black; width: fit-content; padding: 10px; color:white; text-shadow: 1px 1px 2px black;">director / screenwriter _</p>
+        <h1 class="text-header">Hank Orion</h1>
+        <p class="text-sub-header">director / screenwriter / Producer</p>
     </div>
 </div>
-<div class="language-banner" id="languageBanner">
+<!-- <div class="language-banner" id="languageBanner">
     <a href="/." class="language-link">English</a>
     <a href="/ua" class="language-link">Українська</a>
     <a href="/jp" class="language-link">日本語</a>
     <a href="/it" class="language-link">Italiano</a>
-</div>
+</div> -->
 <script src="script.js"></script>
-<!-- <nav class="nav-list">
-    <ul>
-        <li><a href="#about">Biography</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#contact">Contacts</a></li>
-    </ul>
-</nav> -->
+
 
     </section>
     </div>
