--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
     </div>
     
-    <section class="container" id="about">
+    <section class="container bio-ancher" id="about">
         <img class="about-image" src="img/hank orion.jpg" alt="">
 
 <p>
