--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <nav class="nav-list">
         <ul>
+            <li><a href="#">Home</a></li>
             <li><a href="#about">Biography</a></li>
             <li><a href="#work">Work</a></li>
             <li><a href="#contact">Contacts</a></li>
