--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-699SN5HJ3P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-699SN5HJ3P');
+</script>
 <body>
 
     <nav class="nav-list">
@@ -35,7 +44,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#about">Biography</a></li>
             <li><a href="#work">Work</a></li>
-            <li><a href="#contact">Contacts</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -72,13 +81,13 @@ Followed by numerous successful films, Hank continues to make an impact in the w
                 <h3>Film Work</h3>
                 <div class="coming-soon">
                     <p style="margin-bottom: 2vh;">Filming & Releasing Soon</p>
-                <p><a target="_blank" href=""><strong>The Greatest Film Ever Made</strong></a>&nbsp2024</p>
+                <p><a target="_blank" href=""><strong>Man of the Cosmos</strong></a>&nbsp2024</p>
                 <p><a target="_blank" href=""><strong>Outsiders</strong></a>&nbsp2024</p>
-                <p><a target="_blank" href=""><strong>The Man</strong></a>&nbsp2024</p>
 
             </div>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt25394858"><strong>The Man</strong></a>&nbsp2024</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Following</strong></a>&nbsp2023</p>
                 <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Osaka</strong></a>&nbsp2024</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Following</strong></a>&nbsp2023</p>
                 <p><a target="_blank" href="https://www.imdb.com/title/tt22499822"><strong>Spooked</strong></a>&nbsp2022</p>
                 <p><a target="_blank" href="https://www.imdb.com/title/tt21375000"><strong>Love in the City</strong></a>&nbsp2022</p>
                 <p><a target="_blank" href="https://www.imdb.com/title/tt13588604"><strong>I See Darkness</strong></a>&nbsp2022</p>
@@ -86,10 +95,9 @@ Followed by numerous successful films, Hank continues to make an impact in the w
                 <p><a target="_blank" href="https://www.imdb.com/title/tt9193890"><strong>Honey & Wine</strong></a>&nbsp2020</p>
                 <p><a target="_blank" href="https://www.imdb.com/title/tt5374002"><strong>The Job</strong></a>&nbsp2017</p>
                 <p><a target="_blank" href="https://www.imdb.com/title/tt5238824"><strong>Despair</strong></a>&nbsp2017</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Outsiders</strong></a>&nbsp2015</p>
 
                 <h3>TV Work</h3>
-                <p><a target="_blank" href=""><strong>Paradise</strong></a>&nbsp2025</p>
+                <p><a target="_blank" href="https://sanrokuku.com/content/us/"><strong>Us</strong></a>&nbsp2025</p>
         </section>
 
 
